# hAIbuddy_UV

./: .gitignore  README.md
client/: index.html  package-lock.json  package.json
client/src/: SecureLayout.jsx  main.jsx
client/src/assets/: education.json
client/src/components/: CodeEditorPanel.jsx  Footer.jsx  Navbar.jsx
client/src/context/: AuthContext.js  AuthProvider.jsx  domains.json
client/src/pages/about/: About.jsx
client/src/pages/coder/: VoiceAssistant.jsx  config.js
client/src/pages/contact/: Contact.jsx
client/src/pages/dashboard/: Dashboard.jsx
client/src/pages/home/: Home.jsx
client/src/pages/login/: Login.jsx  Register.jsx
client/src/pages/profile/: Profile.jsx
client/src/pages/report/: GenerateReport.jsx
client/src/pages/resume/: Analysis.jsx  CreateResume.jsx
client/src/pages/s2s/: AudioOrb.jsx  VoiceAssistant.jsx  config.js
client/src/pages/services/: Services.jsx
client/src/pages/setup/: Setup.jsx
client/src/pages/skilltraining/: SkillDashboard.jsx
server/: pyproject.toml  test.py  torch_gpu.py
server/app/: main.py
server/app/api/: code_interview_ws.py  interview_route.py  interview_ws.py  user_route.py
server/app/controllers/: interview_controller.py  user_controller.py
server/app/core/: logging_config.py  settings.py
server/app/database/: connection.py
server/app/models/: code_interview_model.py  interview_model.py  user_model.py
server/app/services/: code_execution_service.py  init_services.py  llm_service.py  stt_service.py  tts_service.py
server/app/utils/: auth.py  prompts.py
(+7 files in other folders)
